[package]
name = "pagerduty"
version = "0.1.0"
authors = ["Joe Wilm <joe@jwilm.com>"]
license = "MIT or Apache-2.0"
description = "PagerDuty API Client"
readme = "README.md"
repository = "https://github.com/jwilm/pagerduty"

[dependencies]
hyper = "0.8"
serde = "0.7"
serde_json = "0.7"
serde_macros = "0.7"
