[package]
name = "pagerduty"
version = "0.1.1"
authors = ["Joe Wilm <joe@jwilm.com>"]
license = "MIT OR Apache-2.0"
description = "PagerDuty API Client"
readme = "README.md"
repository = "https://github.com/jwilm/pagerduty-rs"
documentation = "https://jwilm.github.io/pagerduty-rs/pagerduty/"

[dependencies]
hyper = "0.8"
serde = "0.7"
serde_json = "0.7"
serde_macros = "0.7"

[features]
live_tests = []
